Reformat migrations, global exceptions.